@@ -1,2 +1,2 @@
 DIST squashmount-6.3.tar.gz 42040 SHA256 84ddd130691f97ad7b422d8ea507ebdfa61704c8ec0e5e8348b4fa2edda9200e SHA512 f271dbc3ac0234da716aeeb523ee999f0efc0d3829188fad117c9fad5f5dd031e2a12282571ebbaeef2207a53a03572bd00be65169b02925e45ac34ea0e481bb WHIRLPOOL 3a7a63b6422b035f2b46a7e8bded94bb4e76a3125396c4d2e2bc402657b6f8ba086c0a926134695d5761aced55d2ff482aafa7c82980329a2752720cb27d0d7e
-DIST squashmount-7.12.tar.gz 46075 SHA256 0d46807c36269750f43a25697388d61fcb727d10b8c7519a6abd9dad638be2f2 SHA512 5fc2298647daa4e95263822355544949c427f888a39913788583b3cbc688e955936c7d26946fa1d5c98f587578ec58d38372f3e5b8b2f25e7d8dc80c2de18655 WHIRLPOOL 97ee83cf124d26049a0d5351a8971900947b8b591cb2844ef5116e1a711ed4d44e9fa6ff0cff54274fa8b1c17b627c021f52f0aed8a6444e7296b74f9135b499
+DIST squashmount-8.1.tar.gz 51662 SHA256 90f71ff67f8219f196dc8b5dcd1b0207f8a1e4c74a832047e05f00cc79dd3476 SHA512 108da95aed33752b1e079d8235ccb086cc640862d7c70b477ff8c324baba105678b8fe4ea4086b7afc8a4dfb5fcd81fcae65e7a24a47885a9e68ba05e5be8fec WHIRLPOOL 7d4a3cf31729de1320dcbbd54d8d5936ddecd55f2db6e00c620dc62fd75b4b8fae52691e7e4e3af4d6e42c6fb92e46a2c3c547bd0edd6c785010bae251562e02
