@@ -2,6 +2,16 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*squashmount-8.1 (17 Aug 2014)
+
+  17 Aug 2014; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild
+
+*squashmount-8.0 (16 Aug 2014)
+
+  16 Aug 2014; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild. Advanced configuration
+
 *squashmount-7.12 (15 Aug 2014)
 
   15 Aug 2014; Martin Väth <martin@mvath.de>:
