@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cpplint-136 (16 Aug 2014)
+
+  16 Aug 2014; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild. Version files separately to safe downloads
+
 *cpplint-135 (05 Aug 2014)
 
   05 Aug 2014; Martin Väth <martin@mvath.de>:
